Ivanpauno/andino imu rebased (#265)
* Add Shell class

Signed-off-by: Javier Balloffet <javier.balloffet@gmail.com>

* Improve command prompt parsing

Signed-off-by: Javier Balloffet <javier.balloffet@gmail.com>

* Add dependencies for BNO055

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Added arduino code

Signed-off-by: Gonzalo de Pedro <gonzalo@depedro.com.ar>

Remove space

Signed-off-by: Gonzalo de Pedro <gonzalo@depedro.com.ar>

Added Imu to ros control

Signed-off-by: Gonzalo de Pedro <gonzalo@depedro.com.ar>

* Add ros2_control state interfaces for IMU

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* fix random typo

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* remove code not needed

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Fix sensor tag closure in xacro file.

* Add missing param

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Fix state interface imu data to read

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* remove copied code

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Spawn imu controller

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* fix

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Fix state interface names (maybe)

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Same for ros control urdf

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Fix post rebasing errors

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Add Arduino IDE dependencies in README

Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>

* Gazebo changes

Signed-off-by: Gonzalo de Pedro <gonzalo@depedro.com.ar>

* andino urdf

Signed-off-by: Gonzalo de Pedro <gonzalo@depedro.com.ar>

* Fixed dangling conflicts

Signed-off-by: Gonza

--- a/andino_control/config/andino_controllers.yaml
+++ b/andino_control/config/andino_controllers.yaml
@@ -8,6 +8,17 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+    imu_sensor_broadcaster:
+      type: imu_sensor_broadcaster/IMUSensorBroadcaster
+
+imu_sensor_broadcaster:
+  ros__parameters:
+    sensor_name: 'imu_sensor'
+    frame_id: 'base_link'
+    static_covariance_orientation: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+    static_covariance_angular_velocity: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+    static_covariance_linear_acceleration: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+
 diff_controller:
   ros__parameters:
     # See https://github.com/ros-controls/ros2_controllers/blob/humble/diff_drive_controller/src/diff_drive_controller_parameter.yaml
