--- a/andino_control/package.xml
+++ b/andino_control/package.xml
@@ -17,6 +17,7 @@
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>diff_drive_controller</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>imu_sensor_broadcaster</exec_depend>
   <exec_depend>ros2controlcli</exec_depend>
 
   <test_depend>ament_cmake_clang_format</test_depend>
