--- a/andino_description/config/andino/sensors.yaml
+++ b/andino_description/config/andino/sensors.yaml
@@ -14,3 +14,11 @@ camera:
   dx: 0.085
   dy: 0.0
   dz: 0.025
+
+imu:
+  mass: 0.05          # mass in Kg
+  box_size: 0.01
+  box_size_height: 0.0025
+  dx: 0.0
+  dy: 0.0
+  dz: 0.0513
